<resources>
    <string name="app_name">Event Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_newEvent">New Event</string>
    <string name="eventTitleEditTextHint">Event Title</string>
    <string name="eventLocationEditTextHint">Event Location</string>
    <string name="eventDateEditTextHint">Event Date</string>
    <string name="eventCommentsEditTextHint">Comments</string>
    <string name="eventCancelButtonText">Cancel</string>
    <string name="eventSaveButtonText">Save</string>
    <string name="improperEventValuesAlertDialogMessage">Please verify that the Title and Location are not empty and the Date and Time are set.</string>
    <string name="invalidEventOkButton">OK</string>
    <string name="eventDateButtonText">Set Event Date</string>
    <string name="eventTimeButtonText">Set Event Time</string>
    <string name="eventTimePickerMessage">Event Time</string>
    <string name="eventDatePickerMessage">Event Date</string>
    <string name="drawerOpened">Drawer Opened</string>
    <string name="drawerClosed">Drawer Closed</string>
    <string name="emptyViewMessage">No events found in this timeframe</string>
    <string name="dateFormatString">yyyy-MM-dd HH:mm</string>
    <string name="editEventLoadErrorToastMessage">Error loading event to edit</string>
    <string name="exceptionCaughtString">"Exception caught: "</string>
    <string-array name="drawer">
        <item>Today</item>
        <item>Next 7 Days</item>
        <item>Next 30 Days</item>
        <item>All Future Events</item>
    </string-array>
</resources>
